--- a/internal/config.example.json
+++ b/internal/config.example.json
@@ -25,8 +25,8 @@
       "enabled": false,
       "app_id": "",
       "app_secret": "",
-      "encrypt_key": "",
-      "verification_token": ""
+      "domain": "feishu",
+      "group_policy": "open"
     },
     "qq": {
       "enabled": false,
